--- a/electron-bill-app/frontend/src/index.css
+++ b/electron-bill-app/frontend/src/index.css
@@ -24,10 +24,12 @@ a:hover {
 
 body {
   margin: 0;
+  margin-top: -20px;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  min-width: 220px;
   min-height: 100vh;
+  font-family:'Courier New', Courier, monospace;
 }
 
 h1 {
@@ -41,7 +43,7 @@ button {
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
+  font-family: lato;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
